# internal/api/handlers/user_kyc_handler.go
@@ -190,3 +190,45 @@ func (h *Handler) RejectKycVerification(gCtx *gin.Context, verificationId int) {
 
 	gCtx.JSON(http.StatusOK, kycVerification)
 }
+
+func (h *Handler) RevokeKycVerification(gCtx *gin.Context, verificationId int) {
+
+	claims, exists := middleware.GetUserClaims(gCtx)
+	if !exists {
+		gCtx.JSON(http.StatusUnauthorized, logger.LogError("JWT not valid"))
+		return
+	}
+
+	if claims.Role != authUtils.RoleAdmin {
+		gCtx.JSON(http.StatusForbidden, logger.LogError("Forbidden"))
+		return
+	}
+
+	logger.LogInfo("🚀 Starting revoking KYC verification by ID: %d", verificationId)
+
+	var req server.KycVerificationRevokeRequest
+	if err := gCtx.ShouldBindJSON(&req); err != nil {
+		gCtx.JSON(http.StatusBadRequest, err.Error())
+		return
+	}
+	reason := req.Reason
+
+	kycVerification, err := h.userSvc.RevokeKycVerification(gCtx.Request.Context(), verificationId, reason, claims.UserID)
+	if err != nil {
+		switch {
+		case errors.Is(err, services.ErrKycVerificationNotFound):
+			gCtx.JSON(http.StatusNotFound, err.Error())
+			return
+		case errors.Is(err, services.ErrMessageInvalidReason):
+			gCtx.JSON(http.StatusBadRequest, err.Error())
+			return
+		case errors.Is(err, services.ErrMessageInvalidStatus):
+			gCtx.JSON(http.StatusConflict, err.Error())
+			return
+		}
+		gCtx.JSON(http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	gCtx.JSON(http.StatusOK, kycVerification)
+}
